Fix a bunch of spacing issues in input and output filters.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -30,38 +30,38 @@
 % To   <italic-correction/>
 
 %\MSIEmptyElement[italic-correction]{/}
-\MSIEmptyElement{maketitle}
-\MSIEmptyElement[maketoc]{tableofcontents}
-\MSIEmptyElement[makelof]{listoffigures}
-\MSIEmptyElement[makelot]{listoftables}
-\MSIEmptyElement{frontmatter}
-\MSIEmptyElement{backmatter}
-\MSIEmptyElement{appendix}
-\MSIEmptyElement{mainmatter}
-\MSIEmptyElement[leftquote]{textquotedblleft}
-\MSIEmptyElement[rightquote]{textquotedblright}
-\MSIEmptyElement{textbackslash}
-\MSIEmptyElement[msibr type="discretionaryHyphen" invisDisplay="-"]{-}
-\MSIEmptyElement[msibr type="noBreak" invisDisplay="~"]{nolinebreak}
-\MSIEmptyElement[asterisk]{*}
-\MSIEmptyElement[hspace type="emSpace"]{quad}
-\MSIEmptyElement[hspace type="twoEmSpace"]{qquad}
-\MSIEmptyElement[hspace type="thinSpace"]{,}
-%\MSIEmptyElement[hspace type="medSpace" dim="0.5em"]{:}
-\MSIEmptyElement[hspace type="thickSpace"]{;}
-\MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}
-\MSIEmptyElement[hspace type="negativeThinSpace"]{!}
-\MSIEmptyElement[hspace type="noIndent"]{noindent}
-\MSIEmptyElement[vspace type="smallSkip" dim="3pt"]{smallskip}
-\MSIEmptyElement[vspace type="mediumSkip" dim="6pt"]{medskip}
-\MSIEmptyElement[vspace type="bigSkip" dim="12pt"]{bigskip}
+\MSIEmptyElement{maketitle}{T}
+\MSIEmptyElement[maketoc]{tableofcontents}{T}
+\MSIEmptyElement[makelof]{listoffigures}{T}
+\MSIEmptyElement[makelot]{listoftables}{T}
+\MSIEmptyElement{frontmatter}{T}
+\MSIEmptyElement{backmatter}{T}
+\MSIEmptyElement{appendix}{T}
+\MSIEmptyElement{mainmatter}{T}
+\MSIEmptyElement[leftquote]{textquotedblleft}{}
+\MSIEmptyElement[rightquote]{textquotedblright}{}
+\MSIEmptyElement{textbackslash}{}
+\MSIEmptyElement[msibr type="discretionaryHyphen" invisDisplay="-"]{-}{}
+\MSIEmptyElement[msibr type="noBreak" invisDisplay="~"]{nolinebreak}{}
+\MSIEmptyElement[asterisk]{*}{}
+\MSIEmptyElement[hspace type="emSpace"]{quad}{}
+\MSIEmptyElement[hspace type="twoEmSpace"]{qquad}{}
+\MSIEmptyElement[hspace type="thinSpace"]{,}{}
+%\MSIEmptyElement[hspace type="medSpace" dim="0.5em"]{:}{}
+\MSIEmptyElement[hspace type="thickSpace"]{;}{}
+\MSIEmptyElement[hspace type="italicCorrectionSpace"]{/}{}
+\MSIEmptyElement[hspace type="negativeThinSpace"]{!}{}
+\MSIEmptyElement[hspace type="noIndent"]{noindent}{}
+\MSIEmptyElement[vspace type="smallSkip" dim="3pt"]{smallskip}{T}
+\MSIEmptyElement[vspace type="mediumSkip" dim="6pt"]{medskip}{T}
+\MSIEmptyElement[vspace type="bigSkip" dim="12pt"]{bigskip}{T}
 
-\MSIEmptyElement{qedhere}
+\MSIEmptyElement{qedhere}{}
 
-\MSIEmptyElement[msibr type="allowBreak" invisDisplay="|"]{allowbreak}
+\MSIEmptyElement[msibr type="allowBreak" invisDisplay="|"]{allowbreak}{}
 
 
-\MSIEmptyElement{nobreakspace}
+\MSIEmptyElement{nobreakspace}{}
 
 
 % Use MSISimpleEnvironment when you want to convert a
@@ -82,9 +82,9 @@
 \MSISimpleEnvironment{subequations}
 
 \MSISimpleEnvironment{tabbing}
-\MSIEmptyElement[tab-gt]{>}%  these are used in tabbing environnment
-\MSIEmptyElement[tab-plus]{+}
-\MSIEmptyElement[tab-eq]{=}
+\MSIEmptyElement[tab-gt]{>}{}%  these are used in tabbing environnment
+\MSIEmptyElement[tab-plus]{+}{}
+\MSIEmptyElement[tab-eq]{=}{}
 
 
 \MSISimpleEnvironment{proof}
