--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -528,7 +528,7 @@
       {\@namedef{msi@end@#2}{\msi@close@element</#2>}}}%
 
 
-\def\numberwithin#1#2{\msitag{\numberwithin{#1}{#2}}}
+%%\def\numberwithin#1#2{\msitag{\numberwithin{#1}{#2}}}
 %% %% Newcommand and renewcommand
  
  \def\newcommand{\@ifnextchar*{\@newcommand}{\@newcommand{}}}
