Work on subequations (bug 2688)

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -79,7 +79,7 @@
 \MSISimpleEnvironment[centeredEnv]{center}
 \MSISimpleEnvironment{flushleft}
 \MSISimpleEnvironment{flushright}
-\MSISimpleEnvironment{subequations}
+%%\MSISimpleEnvironment{subequations}
 
 \MSISimpleEnvironment{tabbing}
 \MSIEmptyElement[tab-gt]{>}{}%  these are used in tabbing environnment
