Put in a UI for table labels. They are not wired up yet (not saved, not converted to TeX).

--- a/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
+++ b/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
@@ -118,6 +118,7 @@
 <!ENTITY tableCaptionNone.label           "None">
 <!ENTITY backgroundInheritColor.label     "(Let page color show through)">
 
+<!ENTITY LabelText.label                  "Label for cross-references">
 <!-- !ENTITY cellPercent.label                "percent of table" -->
 
 <!ENTITY borderWidthUnspec.label    "-- unspecified --">
