Tweak \FORMULA and \HTMLButton and \textcurrency and now samplearticle previews.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -209,7 +209,7 @@
 \MSIUnicode{textexclamdown}{a1}
 \MSIUnicode{cents}{a2}
 \MSIUnicode{pounds}{a3}
-\MSIUnicode{textcurrency}{a4}
+%\MSIUnicode{textcurrency}{a4}
 \MSIUnicode{yen}{a5}
 \MSIUnicode{AA}{c5}
 \MSIUnicode{aa}{e5}
