--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1654,10 +1654,10 @@
 \def\&{\char`\&amp;}
 \def\|{\Vert}
 
-
+\def\textcurrency{\msitag{<textcurrency req="textcomp"/>}}
 
 \def\out@hyperref#1#2#3#4{%
-   \msiopentag{a}{<a href="#4">}#1\msiclosetag{a}{</a>}\ignorespaces}
+   \msiopentag{a}{<a href="#4" req="hyperref">}#1\msiclosetag{a}{</a>}\ignorespaces}
 
 \newif\if@in@texttag
 \@in@texttagfalse
