--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -525,7 +525,18 @@
    \@ifnextchar[{\@newenv@b{#1}{#2}[#3]}{\@newenv@b{#1}{#2}[#3][]}}
 
 \def\@newenv@b#1#2[#3][#4]#5#6{%
-    \expandafter\preambleToks\expandafter{\the\preambleToks^^0a\newenvironment{#2}[#3][#4]{#5}{#6}}%
+    \expandafter\preambleToks\expandafter{\the\preambleToks^^0a\newenvironment#1{#2}}%
+    \def\msi@tmp{#3}%
+    \ifx\msi@tmp\@empty
+    \else
+       \expandafter\preambleToks\expandafter{\the\preambleToks[#3]}
+    \fi
+    \def\msi@tmp{#4}%
+    \ifx\msi@tmp\@empty
+    \else
+       \expandafter\preambleToks\expandafter{\the\preambleToks[#4]}
+    \fi
+    \expandafter\preambleToks\expandafter{\the\preambleToks{#5}{#6}}
     \@ifundefined{msi@begin@#2}%
       {\@namedef{msi@begin@#2}{\msi@open@element<#2>}}%
       {\@namedef{msi@end@#2}{\msi@close@element</#2>}}}%
