Made beamer require article.css (it needs someone to define style for <sectiontitle> etc)

--- a/filters/ptprince/ptdata/msi-beamer.cls
+++ b/filters/ptprince/ptdata/msi-beamer.cls
@@ -7,6 +7,8 @@
 \MSITextElement{usetheme}
 \MSITextElement{institute}
 
-\def\classcss{@import url("resource://app/res/css/beamer.css");}
+\def\classcss{%
+   @import url("resource://app/res/css/article.css");
+   @import url("resource://app/res/css/beamer.css");}
 
 \makeatother
