Some fixes to get beamer going modulo a couple oddities in the sample doc.

--- a/filters/ptprince/ptdata/msi-beamer.cls
+++ b/filters/ptprince/ptdata/msi-beamer.cls
@@ -4,11 +4,13 @@
   \msitag{<?sw-xslt href="beamer.xsl" type="text/xml" ?>^^0a}
 }
 
-\MSITextElement{usetheme}
-\MSITextElement{institute}
+%\MSITextElement{usetheme}
+%\MSITextElement{institute}
 
 \def\classcss{%
    @import url("resource://app/res/css/article.css");
    @import url("resource://app/res/css/beamer.css");}
+
+\input msi-beamer.sty % do we need a separate file?
 
 \makeatother
