--- a/filters/ptprince/ptdata/msi-beamer.sty
+++ b/filters/ptprince/ptdata/msi-beamer.sty
@@ -1,10 +1,10 @@
 %% Jon, I need help here  Compare with beamer.xsl
 
 \MSISimpleEnvironment[beamerframe]{frame}
-\MSIListEnvironment{stepnumberedlist}{enumerate}{stepnumberedListItem}
-\MSIListEnvironment{stepbulletlist}{itemize}{stepbulletListItem}
-\MSIListEnvironment{alertstepnumberedlist}{enumerate}{alertstepnumberedListItem}
-\MSIListEnvironment{alertbulletlist}{itemize}{alertstepbulletListItem}
+\MSIListEnvironment{stepnumberedlist}{stepenumerate}{stepnumberedListItem}
+\MSIListEnvironment{stepbulletlist}{stepitemize}{stepbulletListItem}
+\MSIListEnvironment{alertstepnumberedlist}{stepenumeratewithalert}{alertstepnumberedListItem}
+\MSIListEnvironment{alertstepbulletlist}{stepitemizewithalert}{alertstepbulletListItem}
 
 %% Jon, is there more to handling the various items?
 
