--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1417,7 +1417,7 @@
   \ifmmode
     \char`\\\char`\ %
   \else
-    \msihmode\msitag{<hspace type="requiredSpace" />}%
+    \msihmode\msitag{<hspace type="requiredSpace">&nbsp;</hspace>}%
   \fi}
 
 \def~{%
