--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -2089,11 +2089,11 @@
 
 
 \def\msi@begin@figureA[#1]{%
-   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placeLocation="#1" >}%
+   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f" placeLocation="#1" >}%
 }
 
 \def\msi@begin@figureB{%
-   \msiopentag{msiframe}{<msiframe framtype="figure" pos="float">}%
+   \msiopentag{msiframe}{<msiframe frametype="figure" pos="float" placement="f">}%
 }
 
 \def\msi@end@figure{%
