Fix 3185. Also see comment in bug report.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1997,7 +1997,7 @@
      \expandafter\msitopreambleextra\expandafter{\msi@rbrace}%
    \else
      \@temptokena={\msitag{#1}}%
-     \{\the\@temptokena\}
+     \msi@lbrace\the\@temptokena\msi@rbrace
    \fi
    \@gobbleargs}
 
