--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -113,7 +113,7 @@ Revert=Revert
 SendPageReason=before sending this page
 Send=Send
 AttributesFor=Current attributes for: 
-MissingImageError=Please enter or choose an image of type gif, jpg, or png.
+MissingImageError=Please enter or choose an image of type gif, jpg, png, tif, eps, pdf, or svg.
 EmptyHREFError=Please choose a location to create a new link.
 LinkText=Link Text
 LinkImage=Link Image
