--- a/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
+++ b/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
@@ -129,6 +129,7 @@
 
 <!ENTITY placement.label "Placement">
 <!ENTITY EnterNewName.tooltip "Enter a new key name">
+<!ENTITY None.label  "None">
 <!ENTITY Above.label  "Above">
 <!ENTITY Below.label  "Below">
 <!ENTITY CaptionText.label  "Caption Text">
