Added 'Set alignment' to the Edit menu. It seems to enable and disable correctly. There are many problems with the equation array dialog and the XSLT output.

--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -488,6 +488,8 @@
 <!ENTITY listdefinition.accesskey "d">
 <!ENTITY listProps.label "List Properties...">
 <!ENTITY listprops.accesskey "l">
+<!ENTITY setalignment.accesskey "t">
+<!ENTITY setalignment.label "Set alignment">
 
 <!ENTITY ParagraphSelect.tooltip "Choose a Paragraph Format">
 <!-- Shared in Paragraph, and Toolbar menulist -->
