--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -569,6 +569,7 @@
 %\MSIMathQuote{ddagger}
 %\MSIMathQuote{ddag}
 %\MSIMathQuote{ddots}
+\MSIMathQuote{deg}
 \MSIMathQuote{Delta}
 \MSIMathQuote{delta}
 \MSIMathQuote{det}
@@ -582,6 +583,7 @@
 \MSIMathQuote{diiiint}
 \MSIMathQuote{diiint}
 \MSIMathQuote{diint}
+\MSIMathQuote{dim}
 \MSIMathQuote{dint}
 \MSIMathQuote{displaystyle}
 
@@ -644,6 +646,7 @@
 \MSIMathQuote{hat}
 %\MSIMathQuote{hbar}
 \MSIMathQuote{heartsuit}
+\MSIMathQuote{hom}
 \MSIMathQuote{hookleftarrow}
 \MSIMathQuote{hookrightarrow}
 \MSIMathQuote{hslash}
@@ -655,6 +658,7 @@
 \MSIMathQuote{impliedby}
 \MSIMathQuote{implies}
 \MSIMathQuote{Im}
+\MSIMathQuote{inf}
 \MSIMathQuote{infty}
 \MSIMathQuote{injlim}
 \MSIMathQuote{intercal}
@@ -663,6 +667,7 @@
 \MSIMathQuote{iota}
 \MSIMathQuote{Join}
 \MSIMathQuote{kappa}
+\MSIMathQuote{ker}
 %\MSIMathQuote{lambdabar}
 \MSIMathQuote{Lambda}
 \MSIMathQuote{lambda}
@@ -693,7 +698,10 @@
 \MSIMathQuote{lessgtr}
 \MSIMathQuote{lesssim}
 \MSIMathQuote{lfloor}
+\MSIMathQuote{lg}
 \MSIMathQuote{lhd}
+\MSIMathQuote{liminf}
+\MSIMathQuote{limsup}
 \MSIMathQuote{limits}
 \MSIMathQuote{lim}
 \MSIMathQuote{llcorner}
@@ -885,6 +893,7 @@
 \MSIMathQuote{succsim}
 \MSIMathQuote{succ}
 \MSIMathQuote{sum}
+\MSIMathQuote{sup}
 \MSIMathQuote{supseteqq}
 \MSIMathQuote{supseteq}
 \MSIMathQuote{supsetneqq}
