--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -405,7 +405,12 @@
    {\everypar={}\msitag{^^0a}\msiopentag{title}{<title>}#1\msiclosetag{title}{</title>}}}
 
 \def\out@thanks#1{%
-   \msitag{^^0a}\msiopentag{thanks}{<thanks>}#1\msiclosetag{thanks}{</thanks>}}
+   \msitag{<notewrapper type="footnote" markOrText="undefined">
+        <note style="padding: 10px;" type="footnote" hide="false">
+          <bodyText>#1<br/>
+          </bodyText>
+        </note>
+        </notewrapper>}}
 
 \def\out@and{\msiclosetag{author}{</author>}\msitag{^^0a}\msiopentag{author}{<author>}}%
 
