Before fixing captions on plots, I fixed captions on images. You can now reliably choose to put captions at the top or the bottom. I also took out the editing box for the caption, since captions can be edited nicely in the main document. The CSS values for caption-side were 'above' and 'below' instead of 'top' and 'bottom'. I also tried to clean  up the code  some.

--- a/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
+++ b/prince/base/locale/en-us/dialogs/msiEditorImageProperties.dtd
@@ -130,9 +130,8 @@
 <!ENTITY placement.label "Placement">
 <!ENTITY EnterNewName.tooltip "Enter a new key name">
 <!ENTITY None.label  "None">
-<!ENTITY Above.label  "Above">
-<!ENTITY Below.label  "Below">
-<!ENTITY CaptionText.label  "Caption Text">
+<!ENTITY Above.label  "Top">
+<!ENTITY Below.label  "Bottom">
 <!ENTITY AltText.label  "Alt Text">
 <!ENTITY NewKeyOrDocName.tooltip  "Enter a new key name or a document name">
 <!ENTITY MakeRelativeCheckbox.label  "Make reference relative">
