Captions are working now for plots. I took out the caption editing field since captions are best edited in the main window.

--- a/prince/base/locale/en-us/dialogs/ComputeGraphSettings.dtd
+++ b/prince/base/locale/en-us/dialogs/ComputeGraphSettings.dtd
@@ -102,10 +102,9 @@
 <!ENTITY labelingname.label         "Name">
 <!ENTITY labelingcaption.label      "Caption">
 
-<!ENTITY labelingnone.label         "None">
-<!ENTITY labelingabove.label        "Above">
-<!ENTITY labelingbelow.label        "Below">
-<!ENTITY labelingcaptiontext.label  "Caption Text">
+<!ENTITY none.label         "None">
+<!ENTITY above.label        "Top">
+<!ENTITY below.label        "Bottom">
 
 <!ENTITY axisxlabel.label           "X Axis">
 <!ENTITY axisylabel.label           "Y Axis">
