Now plots when they are created use many more preferences than height, width, and units, which was the case until now.

--- a/prince/base/locale/en-us/dialogs/preferences.dtd
+++ b/prince/base/locale/en-us/dialogs/preferences.dtd
@@ -472,7 +472,7 @@
 <!ENTITY SpellChecking.label  "Spell checking">
 <!ENTITY PlotsTab.label "Plots">
 
-<!ENTITY LabellingTab.label "Labelling">
+<!ENTITY LabellingTab.label "Labeling">
 <!ENTITY ViewDefaults.label "View defaults">
 
 <!ENTITY TypesettingTab.label "Typesetting">
